crates/libs/frieze/tests/ui/unsupported_field_type_bool.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: bool,
}

fn main() {}
